<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ExtraText">

    <EditText
        android:id="@+id/txtPokemonName"
        android:layout_width="135dp"
        android:layout_height="48dp"
        android:layout_marginTop="192dp"
        android:autofillHints=""
        android:ems="8"
        android:hint="@string/pokemon_name"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewIdPokemon"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="57dp"
        android:layout_height="54dp"
        android:layout_marginTop="632dp"
        android:text="@string/a"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.194"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonUpdate"
        android:layout_width="57dp"
        android:layout_height="54dp"
        android:layout_marginTop="632dp"
        android:text="@string/u"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.684"
        app:layout_constraintStart_toEndOf="@+id/buttonAdd"
        app:layout_constraintTop_toTopOf="parent" />

    p

    <Button
        android:id="@+id/buttonDelete"
        android:layout_width="57dp"
        android:layout_height="54dp"
        android:layout_marginTop="632dp"
        android:text="@string/d"
        app:layout_constraintEnd_toStartOf="@+id/buttonUpdate"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toEndOf="@+id/buttonAdd"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="206dp"
        android:layout_height="201dp"
        android:contentDescription="@string/imagen_pokemon"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewIdPokemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/pokemon_id"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.064" />

    <TextView
        android:id="@+id/textContainerPokemonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/nombre_pokemon"
        app:layout_constraintBottom_toTopOf="@+id/txtPokemonName"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/experiencia_base"
        app:layout_constraintBottom_toTopOf="@+id/intExperienciaBasePokemon"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/intExperienciaBasePokemon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nulo0"
        android:inputType="number"
        android:textColorHint="#8D6E63"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPokemonName" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/peso"
        app:layout_constraintBottom_toTopOf="@+id/intPesoPokemon"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/intAltura"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nulo1"
        android:inputType="number"
        android:textColorHint="#8D6E63"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intExperienciaBasePokemon" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/altura"
        app:layout_constraintBottom_toTopOf="@+id/intAltura"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/intPesoPokemon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nulo2"
        android:inputType="number"
        android:textColorHint="#8D6E63"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intAltura" />

    <TextView
        android:id="@+id/textViewPokemonType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="108dp"
        android:layout_marginBottom="12dp"
        android:text="@string/pokemon_type"
        app:layout_constraintBottom_toTopOf="@+id/txtPokemonType"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonShowAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:text="@string/show_all"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDelete" />

    <EditText
        android:id="@+id/txtPokemonType"
        android:layout_width="114dp"
        android:layout_height="48dp"
        android:layout_marginTop="148dp"
        android:layout_marginEnd="56dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:autofillHints="" />

    <TextView
        android:id="@+id/intIdPokemon"
        android:layout_width="61dp"
        android:layout_height="18dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="44dp"
        android:text="@string/emty"
        app:layout_constraintStart_toEndOf="@+id/textViewIdPokemon"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>